--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Sentry Release
         uses: getsentry/action-release@v1.2.0
         env:
@@ -19,6 +21,5 @@ jobs:
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
         with:
           environment: production
-          fetch-depth: 0
           version: "sentry-formula-one@1.0.1"
           sourcemaps: "./build/assets"
