--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,21 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v3
-        id: semantic
-        with:
-          semantic_version: 16
-          extra_plugins: |
-            @semantic-release/changelog@3.0.0
-            @semantic-release/git -D
-          branches: |
-            ['main']
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Sentry Release
         uses: getsentry/action-release@v1.2.0
         env:
@@ -33,5 +21,5 @@ jobs:
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
         with:
           environment: production
-          # version: "sentry-formula-one@1.0.1"
+          version: "sentry-formula-one@1.0.2"
           sourcemaps: "./build/assets"
