Fix - Added Semantic Release

--- a/releaserc.json
+++ b/releaserc.json
@@ -1,5 +1,7 @@
 {
-  "branch": "main",
+  "release": {
+    "branches": ["main", "next"]
+  },
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
