Fix - Added Semantic Release

--- a/releaserc.json
+++ b/releaserc.json
@@ -1,7 +1,5 @@
 {
-  "release": {
-    "branches": ["main", "next"]
-  },
+  "branches": ["master", "next"],
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
