Fix - Added Semantic Release

--- a/releaserc.json
+++ b/releaserc.json
@@ -1,5 +1,5 @@
 {
-  "branches": ["master", "next"],
+  "branches": ["main", "next"],
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
