--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,21 +1,37 @@
+# https://docs.github.com/en/actions
+
 name: "Release"
 
-on:
+on: # yamllint disable-line rule:truthy
   push:
     tags:
-      - "v*"
+      - "**"
 
 jobs:
-  tagged-release:
+  release:
     name: "Release"
+
     runs-on: "ubuntu-latest"
 
     steps:
-      - name: "Build & test"
-        run: |
-          echo "Done Doing all the Release Things!"
+      - name: "Determine tag"
+        run: 'echo "RELEASE_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV'
 
-      - uses: "marvinpinto/action-automatic-releases@latest"
+      - name: "Create release"
+        uses: "actions/github-script@v5"
         with:
-          repo_token: "${{ secrets.CHANGELOG_RELEASE }}"
-          prerelease: false
+          github-token: "${{ secrets.CHANGELOG_RELEASE }}"
+          script: |
+            try {
+              await github.rest.repos.createRelease({
+                draft: false,
+                generate_release_notes: true,
+                name: process.env.RELEASE_TAG,
+                owner: context.repo.owner,
+                prerelease: false,
+                repo: context.repo.repo,
+                tag_name: process.env.RELEASE_TAG,
+              });
+            } catch (error) {
+              core.setFailed(error.message);
+            }
