--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,37 +1,25 @@
-# https://docs.github.com/en/actions
-
-name: "Release"
-
-on: # yamllint disable-line rule:truthy
+name: Release
+on:
   push:
-    tags:
-      - "**"
+    branches: [main]
 
 jobs:
   release:
-    name: "Release"
-
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
 
     steps:
-      - name: "Determine tag"
-        run: 'echo "RELEASE_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV'
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: "Create release"
-        uses: "actions/github-script@v5"
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v3
+        id: semantic
         with:
-          github-token: "${{ secrets.CHANGELOG_RELEASE }}"
-          script: |
-            try {
-              await github.rest.repos.createRelease({
-                draft: false,
-                generate_release_notes: true,
-                name: process.env.RELEASE_TAG,
-                owner: context.repo.owner,
-                prerelease: false,
-                repo: context.repo.repo,
-                tag_name: process.env.RELEASE_TAG,
-              });
-            } catch (error) {
-              core.setFailed(error.message);
-            }
+          semantic_version: 16
+          extra_plugins: |
+            @semantic-release/changelog
+            @semantic-release/git
+          branches: |
+            ['main']
+        env:
+          GITHUB_TOKEN: ${{ secrets.CHANGELOG_RELEASE }}
