--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-    - uses: actions/setup-node@v2
+      -name: Node Setup
+        uses: actions/setup-node@v2
         with:
           node-version: '16'
 
