--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,26 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Node Setup
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-
-      - name: Semantic Release
+      - name: 🚀 Release
         uses: cycjimmy/semantic-release-action@v3
         id: semantic
         with:
           semantic_version: 18
           extra_plugins: |
-            @semantic-release/commit-analyzer@8.0.1
-            @semantic-release/release-notes-generator@9.0.3
-            @semantic-release/changelog@5.0.1
-            @semantic-release/github@7.2.3
-            @semantic-release/git@9.0.0
-          branches: |
-            ['main']
-        env:
-          GITHUB_TOKEN: ${{ secrets.CHANGELOG_RELEASE }}
+            @semantic-release/changelog@6
+            @semantic-release/git@10
+            conventional-changelog-conventionalcommits@4.6.1
