--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,18 +1,30 @@
-name: "Release"
+---
+name: 'Release'
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      semver:
+        description: 'Which version you want to increment? Use MAJOR, MINOR or PATCH'
+        required: true
+        default: 'PATCH'
+      label:
+        description: 'Add Labels. i.e final, alpha, rc'
+        required: false
+        default: ''
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    name: 'Release'
+    runs-on: 'ubuntu-latest'
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-    - name: Semantic Release
-      uses: cycjimmy/semantic-release-action@v3
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # Checkout sources
+      - name: 'Checkout'
+        uses: actions/checkout@v3
+
+      - uses: 'rui-costa/action-automatic-semver-releases@{latest}'
+        with:
+          TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+          SEMVER: '${{ github.event.inputs.semver }}'
+          LABEL: '${{ github.event.inputs.label }}'
