--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
       
-      - name: echo new tag
+      - name: Echo New Tag
         run: |
           echo "The next tag version will be: ${{ steps.taggerFinal.outputs.new_tag }}"
 
@@ -56,7 +56,7 @@ jobs:
       - name: Release Action
         uses: ncipollo/release-action@v1.10.0
         with:
-          commit: ${{ steps.taggerFinal.outputs.new_tag }}
+          tag: ${{ steps.taggerFinal.outputs.new_tag }}
           token: ${{ secrets.CHANGELOG_RELEASE }}
 
   generate_sentry_release:
