--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@ jobs:
   generate_git_tags:
     name: 'GitHub Tags'
     runs-on: ubuntu-latest
+    outputs:
+      output_new_tag: ${{ steps.taggerFinal.outputs.new_tag }}
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v3"
@@ -56,7 +58,7 @@ jobs:
       - name: Release Action
         uses: ncipollo/release-action@v1.10.0
         with:
-          tag: ${{ steps.taggerFinal.outputs.new_tag }}
+          tag: ${{ needs.generate_git_tags.outputs.output_new_tag }}
           token: ${{ secrets.CHANGELOG_RELEASE }}
 
   generate_sentry_release:
@@ -76,5 +78,5 @@ jobs:
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
         with:
           environment: production
-          version: "${{ steps.taggerFinal.outputs.new_tag }}"
+          version: "${{ needs.generate_git_tags.outputs.output_new_tag }}"
           sourcemaps: "./build/assets"
