#Patch - Update Github Context

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,14 +8,12 @@ on:
 jobs:
 
   information:
-    name: Git Context 
+    name: GitHub Context 
     runs-on: ubuntu-latest
     steps:
       - name: Info
-        run: |
-            echo "github.ref_name ${{ github.ref_name }}"
-            echo "github.repository ${{ github.repository }}"
-            echo "github.event ${{ github.event }}"
+        run: echo "$GITHUB_CONTEXT"
+        
   generate_git_tags:
     name: 'GitHub Tags'
     runs-on: ubuntu-latest
