#Patch - Updating Codeowner Paths

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
-_.jsx dirk@quickstark.com
-_.md @quickstarkgeorge
+/src/assets/components/Index._ dirk@quickstark.com
+/src/assets/components/Context._ george@quicksark.com
