#Patch - Removing Source Maps

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
-/src/assets/components/Index._ dirk@quickstark.com
-/src/assets/components/Context._ george@quicksark.com
+/src/assets/components/Index.jsx dirk@quickstark.com
+/src/assets/components/Context.jsx george@quicksark.com
