--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,4 +96,4 @@ jobs:
         with:
           environment: production
           version: "${{ steps.split_repo_name.outputs._1}}@${{ needs.generate_git_tags.outputs.output_new_tag }}"
-          sourcemaps: "./dist/assets"
+          sourcemaps: "./dist"
