--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,3 +97,4 @@ jobs:
           environment: production
           version: "${{ steps.split_repo_name.outputs._1}}@${{ needs.generate_git_tags.outputs.output_new_tag }}"
           sourcemaps: "./dist"
+          url_prefix: "~"
