#Patch - Updated Codeowners and Card.jsx

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,3 @@
 /src/assets/components/Index.jsx dirk@quickstark.com
 /src/assets/components/Context.jsx george@quicksark.com
+*.txt george@quickstark.com
