--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@sentry/react": "^7.12.1",
     "antd": "^4.23.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
