--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 /src/assets/components/Index.jsx dirk@quickstark.com
-/src/assets/components/Context.jsx george@quicksark.com
+/src/assets/components/Context.jsx george@quickstark.com
 *.txt george@quickstark.com
